# Restructure

./: .gitignore  README.md  pyproject.toml
analysis/: Tsyn2-analysis.ipynb  analyze.ipynb  commonvoice-analysis.ipynb
common-voice-to-vctk/: .gitignore  README.md  restructure.ipynb
commonvoice_phonemizer_tester/: error_handling.txt  error_log.txt  maiyamok_handled_error_log.txt  processed_error_log.txt  tester.ipynb
converter/: TSync2-to-gigaspeech.ipynb  TSync2-to-vctk-ph.ipynb  TSync2-to-vctk.ipynb  Tsync-to-vtck.ipynb  Tsync2-to-vtck.ipynb  commonvoice-to-gigaspeech.ipynb  commonvoice-to-vctk.ipynb  restructure.ipynb  tsync2-to-gigaspeech.ipynb
data/converted/: .gitignore
data/raw/: .gitignore
docs/: TSync2_format.md  Tsync2_format.md  commonvoice_format.md  gigaspeech_format.md  vctk_format.md
utils/: audio_util.py  clean_cv.py  file_util.py  text_util.py  trimmer.py
